--- a/index.html
+++ b/index.html
@@ -1,152 +1,103 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL to Iframe</title>
+    <title>Watch Match - ACC U-19 Asia Cup 2024</title>
     <style>
-        body, html {
+        body {
             margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-        #urlFormContainer {
-            padding: 10px;
-            max-width: 500px;
-            margin: 0 auto;
-        }
-        /* Adjusted iframe height to maintain 16:9 aspect ratio */
-        #contentFrame {
-            width: 100%;
-            height: calc(100vw * 8 / 16); /* 16:8 aspect ratio */
-            border: none;
-        }
-        /* Popup styling */
-        #popupMessage {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 20px;
-            background-color: #f8f8f8;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            font-family: 'Arial', sans-serif;
+            background-color: #333;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow: hidden;
             text-align: center;
-            border-radius: 8px;
-            z-index: 1000;
         }
-        #popupMessage button {
-            background-color: #0088cc;
-            color: white;
+        #jwplayerDiv {
+            position: absolute;
+            width: 100% !important;
+            height: 100% !important;
+        }
+        .message-container {
+            max-width: 600px;
+            padding: 20px;
+            background-color: #444;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+        .message-container p {
+            margin: 10px 0;
+        }
+        .join-button {
+            display: inline-block;
             padding: 10px 20px;
-            border: none;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
             border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            margin: 5px;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
         }
-        /* Style for cancel button */
-        #popupMessage .cancel-button {
-            background-color: #ccc;
-            color: black;
+        .join-button:hover {
+            background-color: #0056b3;
         }
     </style>
+    <script src="https://content.jwplatform.com/libraries/SAHhwvZq.js"></script>
 </head>
 <body>
-
-<div id="urlFormContainer" style="display: none;">
-    <form id="urlForm">
-        <label for="urlInput">URL:</label>
-        <input type="text" id="urlInput" name="urlInput" required>
-        <button type="submit">Submit</button>
-    </form>
-</div>
-
-<iframe id="contentFrame" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no" src="https://ss.enamy3.workers.dev/?id=456239772"></iframe>
-
-<!-- Popup for Telegram Join Message -->
-<div id="popupMessage">
-    <p>Join our Telegram Channel for the latest updates!</p>
-    <a href="https://t.me/+Mo019Hv4zrthOGQ1" target="_blank">
-        <button>Join Telegram Channel</button>
-    </a>
-    <button class="cancel-button" onclick="hidePopup()">Cancel</button>
-</div>
-
-<script>
-    // Function to show popup
-    function showPopup() {
-        document.getElementById("popupMessage").style.display = "block";
-    }
-
-    // Function to hide popup
-    function hidePopup() {
-        document.getElementById("popupMessage").style.display = "none";
-    }
-
-    // Show popup after 10 seconds
-    setTimeout(showPopup, 10000); // Show popup after 10 seconds
-
-    // Function to get query parameter
-    function getQueryParameter(name) {
-        const urlParams = new URLSearchParams(window.location.search);
-        return urlParams.get(name);
-    }
-
-    // Function to generate a token from URL with a specified expiration time
-    function generateToken(url, expirationMinutes) {
-        const currentTime = Date.now();
-        const expirationTime = currentTime + expirationMinutes * 60 * 60 * 1000; // Convert hours to milliseconds
-        const tokenData = { url, expiration: expirationTime };
-        return btoa(JSON.stringify(tokenData));
-    }
-
-    // Function to decode the token to URL
-    function decodeToken(token) {
-        return atob(token);
-    }
-
-    // Event listener for form submission
-    document.getElementById('urlForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-        var url = document.getElementById('urlInput').value;
-        if (url) {
-            var token = generateToken(url, 5); // Set token validity to 5 hours
-            window.location.href = `${window.location.pathname}?token=${encodeURIComponent(token)}`;
-        } else {
-            alert("Please enter a valid URL.");
-        }
-    });
-
-    // On page load, check for token and set iframe src
-    window.onload = function() {
-        var token = getQueryParameter('token');
-        if (token) {
-            var tokenData = JSON.parse(decodeToken(token));
-            var currentTime = Date.now();
-            if (tokenData.expiration > currentTime) {
-                document.getElementById('contentFrame').src = tokenData.url;
-                document.getElementById('urlFormContainer').style.display = 'none';
-            } else {
-                alert('Token has expired. Please enter a new URL.');
+            <div id="jwplayerDiv"></div>
+        <script type="text/javascript">
+            // Function to intercept network requests
+            function interceptNetworkRequests() {
+                const originalOpen = XMLHttpRequest.prototype.open;
+                XMLHttpRequest.prototype.open = function(method, url) {
+                    if (url.startsWith('https://sonydaimenew.akamaized.net/')) {
+                        url = url.replace('sonydaimenew.akamaized.net', 'sony.cricsterspkl.io/event.php');
+                    } else if (url.startsWith('https://sonypartnersdaimenew.akamaized.net/')) {
+                        url = url.replace('sonypartnersdaimenew.akamaized.net', 'sony.cricsterspkl.io/event.php');
+                    }
+                    return originalOpen.apply(this, arguments);
+                };
             }
-        }
-    };
-</script>
 
-<!-- BEGIN: Powered by Supercounters.com -->
-<center>
-    <div id="sconlineimg" title="Free Online Counter" style="position: relative; display: inline-block; width: 80px; height: 21px; overflow: hidden; cursor: pointer; background-image: url(&quot;//widget.supercounters.com/images/online/e61c1c.png&quot;); background-repeat: no-repeat; background-position: 0px 0px;">
-        <div style="display: inline-block; font-family: Arial; font-size: 11px; color: rgb(255, 255, 255); position: absolute; font-weight: normal; width: 80px; height: 15px; top: 0px; left: 0px; overflow: hidden; font-style: normal; text-transform: none; text-decoration: none; letter-spacing: 0px; word-spacing: 0px; padding: 0px; margin: 4px 0px 0px; text-align: center; line-height: normal; text-size-adjust: none; direction: ltr; text-shadow: none; vertical-align: baseline;">
-            75 ONLINE
-        </div>
-    </div>
-    <br>
-    <noscript>
-        <a href="https://www.supercounters.com/">free online counter</a>
-    </noscript>
-</center>
-<!-- END: Powered by Supercounters.com -->
+            // Call the intercept function
+            interceptNetworkRequests();
 
-</body>
+            // Set up JWPlayer with playlist
+            var playerSetup = {
+                playlist: [
+                    {
+                        title: "ACC U-19 Asia Cup 2024",
+                        description: "You're Watching",
+                        sources: [
+                            {
+                                file: "https://sonydaimenew.akamaized.net/hls/live/2022316/DAI12ME-V3/master_mdh.m3u8?hdnea=exp=1733338169~acl=*~id=155678448410001965141733288169154~hmac=f181cd626f25244f98d39f2be8f962579e7e77d8b5adcefcefa147dabeba4834",
+                                type: "hls",
+                                label: "1080p",
+                                default: true
+                            }
+                        ]
+                    }
+                ],
+                width: "100%",
+                height: "100%",
+                autostart: true,
+                controls: true
+            };
+            jwplayer("jwplayerDiv").setup(playerSetup);
+            
+            // Display a pop-up message when the page starts
+            window.addEventListener("load", function() {
+                var result = window.confirm("Join @thecricsters for more updates?");
+                if (result) {
+                    window.location.href = "https://t.me/+uBrjQXMdNqxkOWVl";
+                }
+            });
+        </script>
+    </body>
 </html>
